@@ -52,6 +52,8 @@ version 2.0.0:
 	  "nudges" (Julien Cegarra, Martin Bayard)
 	* Added an account action to open your Hotmail inbox from MSN
 	* Jabber support for SRV lookups
+	* When opening the log viewer, show the most recent log by default
+	  (Peter McCurdy)
 
 	Bug fixes:
 	* People using input methods can now use Enter again.
